--- a/html/politics.html
+++ b/html/politics.html
@@ -17,7 +17,7 @@
     </header>
 
     <nav>
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./politics.html">Politics</a>
         <a href="./technology.html">Technology</a>
         <a href="./business.html">Business</a>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="news-section">
-            <img src="../images/politics3.jpg" alt="Placeholder Image 2">
+            <img src="../images/politics2.jpg" alt="Placeholder Image 2">
             <h3>Unprecedented Tactics: Russian Forces Employ Elephants in Ukraine War</h3>
             <p>In a startling and unprecedented turn of events, reports suggest that Russian forces have incorporated elephants into their military strategy in the ongoing conflict in Ukraine. This article explores the unconventional use of these majestic creatures on the battlefield, delving into the motivations behind such a unique approach and its potential implications. From historical perspectives on war elephants to the ethical considerations of deploying these gentle giants in a modern conflict zone, we dissect the complexities surrounding this unconventional tactic. Join us as we investigate the surreal intersection of military strategy and wildlife, shedding light on a remarkable and unexpected chapter in the Ukraine war.</p>
         </div>
