--- a/html/business.html
+++ b/html/business.html
@@ -18,7 +18,7 @@
     </header>
 
     <nav>
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./politics.html">Politics</a>
         <a href="./technology.html">Technology</a>
         <a href="./business.html">Business</a>
