--- a/html/business.html
+++ b/html/business.html
@@ -13,8 +13,11 @@
 <body>
 
     <header>
-        <h1>Breaking Waves</h1>
-        <h4>Your Source for Timely and Trending News</h4>
+        <img src="../images/logo.jpg" alt="Website Logo">
+        <div>
+            <h1>Breaking Waves</h1>
+            <h4>Your Source for Timely and Trending News</h4>
+        </div>
     </header>
 
     <nav>
@@ -30,27 +33,27 @@
         <p>This is the Business page. Explore the latest business headlines and updates.</p>
         
         <div class="news-section">
-            <img src="placeholder1.jpg" alt="Placeholder Image 1">
-            <h3>Title 1</h3>
-            <p>Description for news article 1.</p>
+            <img src="../images/business1.jpg" alt="Placeholder Image 1">
+            <h3>Sky-High Stocks: Wall Street Stunned as Market Soars Through the Roof of NYSE Building</h3>
+            <p>In an astonishing turn of events, the financial world was left in awe as stock prices soared to unprecedented heights, literally piercing through the roof of the iconic New York Stock Exchange (NYSE) building. This article explores the extraordinary market surge that defied expectations, delving into the causes and implications of this jaw-dropping phenomenon. From the reactions of traders to the potential repercussions for the global economy, we unravel the surreal events that unfolded on Wall Street, leaving the financial district grappling with a new and unexpected chapter in market history. Join us as we dissect the remarkable tale of stocks reaching new heights, both figuratively and quite literally</p>
         </div>
 
         <div class="news-section">
-            <img src="placeholder2.jpg" alt="Placeholder Image 2">
-            <h3>Title 2</h3>
-            <p>Description for news article 2.</p>
+            <img src="../images/business2.jpg" alt="Placeholder Image 2">
+            <h3>"Crushing the Crust: Cici's Pizza Dominates Market as Sales Surpass Competitors</h3>
+            <p>In a surprising and savory twist, Cici's Pizza has emerged as a force to be reckoned with in the highly competitive pizza industry, surpassing its rivals in sales. This article examines the strategies and innovations that propelled Cici's to the forefront of pizza market success, exploring the factors that set it apart from the competition. From its diverse menu offerings to customer-centric initiatives, we delve into the recipe behind Cici's Pizza's triumph and the impact on the broader landscape of fast-casual dining. Join us as we savor the success story of Cici's, where the irresistible combination of quality, affordability, and innovation has positioned the pizzeria as a true market leader.</p>
         </div>
 
         <div class="news-section">
-            <img src="placeholder3.jpg" alt="Placeholder Image 3">
-            <h3>Title 3</h3>
-            <p>Description for news article 3.</p>
+            <img src="../images/business3.jpg" alt="Placeholder Image 3">
+            <h3>Chubby Duckling Takes Flight: New Company Soars to Success with Quirky Charm</h3>
+            <p> In a delightful twist of entrepreneurship, the newly launched company, "Chubby Duckling," has taken off, capturing the hearts and attention of consumers worldwide. This article explores the whimsical journey of Chubby Duckling, unraveling the unique aspects of its business model, products, or services that have contributed to its rapid ascent. From its quirky branding to innovative offerings, we delve into the factors that have propelled Chubby Duckling into the spotlight and examine the impact on the market. Join us as we witness the charming flight of a new company, where the combination of novelty, creativity, and consumer appeal has set it on a trajectory toward business success.</p>
         </div>
 
         <div class="news-section">
-            <img src="placeholder4.jpg" alt="Placeholder Image 4">
-            <h3>Title 4</h3>
-            <p>Description for news article 4.</p>
+            <img src="../images/business4.jpg" alt="Placeholder Image 4">
+            <h3>Medieval Marvel: Business Sells Black Death Vaccine Centuries After the Plague</h3>
+            <p>In a time-bending revelation, a business has taken a leap into history by offering a vaccine for the Black Death, nearly 700 years after the infamous plague swept through medieval Europe. This article delves into the unexpected and unconventional venture, exploring the motivations, scientific advancements, and public response surrounding this peculiar antidote. From the intricacies of resurrecting a remedy from the pages of history to the contemporary implications for disease prevention, we unravel the extraordinary tale of a business that defies the constraints of time. Join us as we navigate through the realms of the past and present, exploring the unique convergence of medieval history and modern science.</p>
         </div>
     </section>
 
