--- a/html/sports.html
+++ b/html/sports.html
@@ -13,8 +13,11 @@
 <body>
 
     <header>
-        <h1>Breaking Waves</h1>
-        <h4>Your Source for Timely and Trending News</h4>
+        <img src="../images/logo.jpg" alt="Website Logo">
+        <div>
+            <h1>Breaking Waves</h1>
+            <h4>Your Source for Timely and Trending News</h4>
+        </div>
     </header>
 
     <nav>
@@ -30,27 +33,27 @@
         <p>This is the Sports page. Get the latest updates on your favorite sports and athletes.</p>
         
         <div class="news-section">
-            <img src="placeholder1.jpg" alt="Placeholder Image 1">
-            <h3>Title 1</h3>
-            <p>Description for news article 1.</p>
+            <img src="../images/sports1.jpg" alt="Placeholder Image 1">
+            <h3>Gridiron Stalemate: Unprecedented NFL Season Ends with Every Team Tied</h3>
+            <p>In an astonishing turn of events, the NFL season has concluded with an unprecedented outcome – every team finishing the season with an equal number of ties. This article explores the statistical anomaly that has left the football world in disbelief, analyzing the games, strategies, and unpredictable twists that led to this historic collective deadlock. From the reactions of players and coaches to the implications for playoff scenarios, we unravel the unique tale of an NFL season marked by unparalleled parity. Join us as we dissect the gridiron stalemate that defies the odds and reshapes the narrative of competitive balance in professional football.</p>
         </div>
 
         <div class="news-section">
-            <img src="placeholder2.jpg" alt="Placeholder Image 2">
-            <h3>Title 2</h3>
-            <p>Description for news article 2.</p>
+            <img src="../images/sports2.jpg" alt="Placeholder Image 2">
+            <h3>Golf's Grand Discovery: New Jersey Unearths Largest Golf Hole, Shaping the Landscape of the Game</h3>
+            <p>In a golfing revelation, New Jersey has unveiled the largest golf hole ever discovered, capturing the imagination of enthusiasts and reshaping the way we perceive the sport. This article delves into the unexpected find, exploring the size, significance, and potential impact of this colossal golfing feature. From its geological origins to the buzz it has generated within the golfing community, we unravel the unique tale of the largest golf hole in history. Join us as we tee off into uncharted territory, exploring how this discovery may influence the future of golf course design and spark new discussions within the world of golfing enthusiasts.</p>
         </div>
 
         <div class="news-section">
-            <img src="placeholder3.jpg" alt="Placeholder Image 3">
-            <h3>Title 3</h3>
-            <p>Description for news article 3.</p>
+            <img src="../images/sports3.jpg" alt="Placeholder Image 3">
+            <h3>Nautical Mystery: Another Race Boat Vanishes in the Bermuda Triangle, Adding to Maritime Enigma</h3>
+            <p>In a perplexing turn of events, another high-speed race boat has disappeared without a trace in the notorious Bermuda Triangle, deepening the maritime mysteries surrounding this enigmatic region. This article explores the circumstances surrounding the latest vanishing act, delving into the details of the race, the vessel, and the eerie parallels with other unexplained disappearances in the infamous triangle. From the search and rescue efforts to the speculations about the possible causes, we navigate through the maritime puzzle that has left the racing community and maritime experts puzzled. Join us as we set sail into the mystique of the Bermuda Triangle, where another vessel has been swallowed by the sea's secrets.</p>
         </div>
 
         <div class="news-section">
-            <img src="placeholder4.jpg" alt="Placeholder Image 4">
-            <h3>Title 4</h3>
-            <p>Description for news article 4.</p>
+            <img src="../images/sports4.jpg" alt="Placeholder Image 4">
+            <h3>Soccer Ball Species Rediscovered: From Extinct to Endangered in the Heart of the Amazon Rainforest</h3>
+            <p> In a surprising ecological twist, a pack of soccer balls previously thought to be extinct has been discovered thriving in the heart of the Amazon Rainforest. This article explores the fascinating rediscovery that has led to the reclassification of soccer balls from the extinct category to endangered species. Delving into the ecological impact, habitat preferences, and conservation challenges, we unravel the unique tale of soccer balls adapting to the Amazonian ecosystem. From the efforts to preserve this unexpected species to the global implications for sports enthusiasts, join us as we kick off a new chapter in the intersection of sports and biodiversity, highlighting the delicate balance between human activities and the natural world.</p>
         </div>
     </section>
 
