--- a/html/technology.html
+++ b/html/technology.html
@@ -14,8 +14,11 @@
 <body>
 
     <header>
-        <h1>Breaking Waves</h1>
-        <h4>Your Source for Timely and Trending News</h4>
+        <img src="../images/logo.jpg" alt="Website Logo">
+        <div>
+            <h1>Breaking Waves</h1>
+            <h4>Your Source for Timely and Trending News</h4>
+        </div>
     </header>
 
     <nav>
